--- a/public/modules/mr/views/mr-view.html
+++ b/public/modules/mr/views/mr-view.html
@@ -23,7 +23,7 @@
 										<div class="col-md-2">{{mr.info.contact}}</div>
 									</td>
 								</tr>
-							</table>
+							</table> 
 						</div>
 					</div>
 				</div>
@@ -103,7 +103,7 @@
 	</div>
 </div>
 
-<div class="modal fade addNewMR" tabindex="-1" role="dialog" aria-labelledby="addNewMR" aria-hidden="true" style="margin-top: 30px;">
+<!-- <div class="modal fade addNewMR" tabindex="-1" role="dialog" aria-labelledby="addNewMR" aria-hidden="true" style="margin-top: 30px;">
   	<div class="modal-dialog modal-sm">
     	<div class="modal-content new-product-modal-content">
     		<input type="text" class="form-control" placeholder="Product Name" style="margin-bottom: 10px;" ng-model="newProduct.name" />
@@ -113,4 +113,4 @@
     		<img src="./assets/images/tick.png" title="Confirm" style="height: 30px; width: 30px;" ng-click="confirmNewMR()" /> <img src="./assets/images/wrong.png" title="Abort" style="height: 30px; width: 30px;" />
     	</div>
   	</div>
-</div>
+</div> -->
