--- a/public/modules/inventory/views/inventory-view.html
+++ b/public/modules/inventory/views/inventory-view.html
@@ -31,16 +31,16 @@
 			  					{{item.name}}
 			  				</td>
 			  				<td>
-			  					25
+			  					{{item.qty}}
 			  				</td>
 			  				<td>
-			  					<img src="./assets/images/plus.png" style="height: 20px; width: 20px;" title="Add to stock" />
+			  					<div data-toggle='modal' data-target='.buyNewProduct'><img ng-click="setSelected(this)" src="./assets/images/plus.png" style="height: 20px; width: 20px;" title="Add to stock" /></div>
 			  				</td>
 			  				<td>
-			  					<img src="./assets/images/minus.png" style="height: 20px; width: 20px;" title="Remove from stock" />
+			  					<div data-toggle='modal' data-target='.depleteProduct'><img ng-click="setSelected(this)" src="./assets/images/minus.png" style="height: 20px; width: 20px;" title="Remove from stock" /></div>
 			  				</td>
 			  				<td>
-			  					<img src="./assets/images/item_edit.png" style="height: 20px; width: 20px;" title="Edit name/bonus condition" />
+			  					<div data-toggle='modal' data-target='.changeName'><img ng-click="setSelected(this)" src="./assets/images/item_edit.png" style="height: 20px; width: 20px;" title="Edit name/bonus condition" /></div>
 			  				</td>
 			  			</tr>
 					</table>
@@ -128,6 +128,135 @@
     		<input type="number" class="form-control" placeholder="Bonus Amount" style="margin-bottom: 10px;" ng-model="newProduct.bonus.bonus_amt" />
     		<br />
     		<img src="./assets/images/tick.png" title="Confirm" style="height: 30px; width: 30px;" ng-click="confirmNewProduct()" /> <img src="./assets/images/wrong.png" title="Abort" style="height: 30px; width: 30px;" />
+    	</div>
+  	</div>
+</div>
+
+<div class="modal fade depleteProduct" tabindex="-1" role="dialog" aria-labelledby="depleteProduct" aria-hidden="true" style="margin-top: 30px;">
+  	<div class="modal-dialog modal-sm">
+    	<div class="modal-content new-product-modal-content">
+    		<input type="number" class="form-control" placeholder="Quantity" style="margin-bottom: 10px;" ng-model="depletedAmount" />
+    		
+    		<br />
+    		<img src="./assets/images/tick.png" title="Confirm" style="height: 30px; width: 30px;" ng-click="confirmDepleteProduct()" /> <img src="./assets/images/wrong.png" title="Abort" style="height: 30px; width: 30px;" />
+    	</div>
+  	</div>
+</div>
+
+<div class="modal fade changeName" tabindex="-1" role="dialog" aria-labelledby="changeName" aria-hidden="true" style="margin-top: 30px;">
+  	<div class="modal-dialog modal-sm">
+    	<div class="modal-content new-product-modal-content">
+    		<input type="text" class="form-control" placeholder="New Name" style="margin-bottom: 10px;" ng-model="selected.name" />
+    		
+    		<br />
+    		<img src="./assets/images/tick.png" title="Confirm" style="height: 30px; width: 30px;" ng-click="confirmChangeName()" /> <img src="./assets/images/wrong.png" title="Abort" style="height: 30px; width: 30px;" />
+    	</div>
+  	</div>
+</div>
+
+<div class="modal fade buyNewProduct" tabindex="-1" role="dialog" aria-labelledby="buyNewProduct" aria-hidden="true" style="margin-top: 30px;">
+  	<div class="modal-dialog modal-md">
+    	<div class="modal-content buy-new-product-modal-content">
+    		<div class="row-fluid">
+    			<div class="col-md-4">
+    				Purchase Date
+    			</div>
+    			<div class="col-md-8">
+    				<input type="date" class='form-control' placeholder="Purchase date" style="margin-bottom: 10px;" ng-model="purchases.date" />
+    			</div>
+    		</div>
+
+    		<div class="row-fluid">
+    			<div class="col-md-4">
+    				Invoice Number
+    			</div>			
+    			<div class="col-md-8">
+   					<input type="text" class='form-control' placeholder="Invoice number" style="margin-bottom: 10px;" ng-model='purchases.invoice_id' />		
+    			</div>	
+    		</div>
+
+    		<div class="row-fluid">
+    			<div class="col-md-4">
+    				Quantity
+    			</div>
+    			<div class="col-md-8">
+  					<input type="number" id="qty" class='form-control' placeholder="Quantity" ng-change="recalculate()" style="margin-bottom: 10px;" ng-model='purchases.qty' />  				
+    			</div>
+    		</div>
+
+    		<div class="row-fluid">
+    			<div class="col-md-4">
+    				Rate
+    			</div>
+    			<div class="col-md-6">
+  					<input type="number" id="rate" class='form-control' placeholder="Rate" ng-change="recalculate()" style="margin-bottom: 10px;" ng-model='purchases.rate' />  				
+    			</div>
+    		</div>
+
+    		<div class="row-fluid">
+    			<div class="col-md-4">
+    				Batch
+    			</div>
+    			<div class="col-md-8">
+					<input type="text" class='form-control' placeholder="Batch" style="margin-bottom: 10px;" ng-model='purchases.batch' />    				
+    			</div>
+    		</div>
+
+    		<div class="row-fluid">
+    			<div class="col-md-4">
+    				Expiry Date
+    			</div>
+    			<div class="col-md-8">
+    				<input type="date" class='form-control' placeholder="Expiry date" style="margin-bottom: 10px;" ng-model='purchases.expires_in' />
+    			</div>
+    		</div>
+
+    		<div class="row-fluid">
+    			<div class="col-md-4">
+    				Payment Type
+    			</div>
+    			<div class="col-md-8">
+    				<select id='payment-type' placeholder="Payment type" ng-click="paymentTypeChange()" class='form-control' style="margin-bottom: 10px;" ng-model='purchases.payment_type'>
+		    			<option value="full">Full Payment</option>
+		    			<option value="part">Partial Payment</option>
+		    			<option value="cr">Credit</option>
+		    		</select>	
+    			</div>
+    		</div>
+
+    		<div class="row-fluid">
+    			<div class="col-md-4">
+    				Payment Amount
+    			</div>
+    			<div class="col-md-8">
+    				<input type="number" id="payment-amount" class='form-control' ng-change="recalculate()" placeholder="Payment amount" style="margin-bottom: 10px;" ng-model='purchases.payment_amount' />
+    			</div>
+    		</div>
+
+    		<div class="row-fluid">
+    			<div class="col-md-4">
+    				Payment Due
+    			</div>
+    			<div class="col-md-8">
+    				<input type="number" id="payment-due" class='form-control' placeholder="Payment due" style="margin-bottom: 10px;" ng-model='purchases.payment_due' disabled/>	
+    			</div>
+    		</div>
+
+    		<div class="row-fluid">
+    			<div class="col-md-4">
+    				Payment Due Date
+    			</div>
+    			<div class="col-md-8">
+    				<input type="date" class='form-control' placeholder="Expiry date" style="margin-bottom: 10px;" ng-model='purchases.payment_due_date' />
+    			</div>
+    		</div>
+
+    		<div class="row-fluid">
+    			<div class="col-md-12">
+    				<img src="./assets/images/tick.png" title="Confirm" style="height: 30px; width: 30px;" ng-click="confirmBuyNewProduct()" /> 
+	    			<img src="./assets/images/wrong.png" title="Abort" style="height: 30px; width: 30px;" />
+    			</div>
+    		</div>
     	</div>
   	</div>
 </div>
